# EL_PASO

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CONTRIBUTING.md  IRBEM.py  README.md  index.html  main.py  main_dataorg.py  main_poes.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.py  sitemap.xml  test.py
.github/workflows/: ci.yml  install.yml  test.yml
API_reference/download/: index.html
API_reference/extract_variables_from_files/: index.html
API_reference/overview/: index.html
API_reference/save/: index.html
API_reference/saving_strategy/: index.html
API_reference/variable/: index.html
docs/: index.md  requirements.txt
docs/API_reference/: bin_by_time.md  compute_invariant_K.md  data_standard.md  download.md  overview.md  save.md  units.md  (+6 more)
el_paso/: __init__.py  custom_units.py  data_standard.py  download.py  extract_variables_from_files.py  get_variables_from_api.py  load_indices_solar_wind_parameters.py  physics.py  release_mode.py  save.py  saving_strategy.py  standardization.py  units.py  utils.py  variable.py
el_paso.egg-info/: SOURCES.txt  requires.txt  top_level.txt
examples/: GOES_realtime.py  minimal_example.py
scripts/: inspect_cdf_file.py  job_script_template.sh  populate_db.py  submit_slurm_jobs.py
search/: search_index.json
tutorials/: 1_download_data_and_extracting_variables.ipynb  1_source_file_class_and_loading_data.ipynb  2_variable_class.ipynb  3_saving_strategies.ipynb  4_time_binning.ipynb  5_magnetic_field_processing.ipynb  example_orbit.csv
(+163 files in other folders)
