[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "el_paso"
version = "0.1"
authors = [{name="Bernhard Haas", email="bhaas@gfz.de"}]
readme = "README.md"
requires-python=">=3.11"
dependencies = [
    "astropy==7.0.0",
    "cdflib==1.3.3",
    "matplotlib==3.10.0",
    "numpy==2.2.2",
    "pandas==2.2.3",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.3",
    "scipy==1.15.1",
    "tqdm==4.67.1",
    "wget==3.2",
    "wheel",
]

[tool.setuptools.packages.find]
where = ["."]
