# SPDX-FileCopyrightText: 2025 GFZ Helmholtz Centre for Geosciences
# SPDX-FileContributor: Bernhard Haas
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"


[project]
name = "el_paso"
version = "0.1"
authors = [{name="Bernhard Haas", email="bhaas@gfz.de"}]
readme = "README.md"
requires-python=">=3.11"
dependencies = [
    "astropy>=7.0.0",
    "cdflib>=1.3.3",
    "gitpython>=3.1.45",
    "matplotlib>=3.10.0",
    "netcdf4>=1.7.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "scipy>=1.15.1",
    "sscws>=2.4.5",
    "swvo>=1.0.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "wget>=3.2",
    "wheel>=0.45.1",
]

[tool.setuptools.packages.find]
include = ["el_paso*"]